Thu Apr  2 13:04:37 BST 1998 Tony Gale <gale@gtk.org>

	* docs/gtkfaq.sgml: add question on failing GIMP configure

Tue Mar 31 15:41:57 PST 1998 Shawn T. Amundson

	* Makefile.am:
	* examples/*: added the rest of the tutorial examples

Tue Mar 31 06:37:16 1998  Tim Janik  <timj@gtk.org>

	* gtk/testgtk.c (create_cursors): forgot to set the initial `0' cursor.

1998-03-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdkdnd.c (gdk_dnd_display_drag_cursor): First fix: Move the
	window first, display it after (this removes one of the annoying
	flashing effects).

Mon Mar 30 21:29:43 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.c: Add a "style_set" callback, so the
	font can be changed at run time. (needed for GIMP text
	tool)

Tue Mar 31 01:17:23 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtknotebook.c (gtk_notebook_menu_item_create): show the menu_label
	unconditionally (even if it is not a default label).
	(gtk_notebook_update_labels): if we have a tab_label, then use its label
	as the default menu_label.

Mon Mar 30 16:35:57 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/testgtk.c: Improved main loop test. (Quits main
	loop properly, makes it more obvious to the user
	what is going on)

	* gtk/gtkwidget.c (gtk_widget_unparent): Reset the
	allocation _after_ clearing the window.

	* configure.in: If can't find XShmAttach in Xext, check
	in XextSam (for AIX).

	* gtk/gtkmain.c (gtk_events_pending): Remember, small
	numbers are _high_ priority for idle queues.

	* gtk/gtkmain.c (gtk_handle_current_timeouts): Allow
	removing the currently running timeout.

	* gtk/testgtk.c (timeout_test): Use the right prototype
	for callback.

Mon Mar 30 21:40:21 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkclist.c (gtk_clist_row_from_ypixel): removed this function,
	it was unneeded and not exported.

	* gtk/gtkwidget.c (gtk_widget_ref) (gtk_widget_unref): don't check-cast
	the widgets to volatile GtkObjects (which was there for debugging