@@ -9,10 +9,10 @@ menu: menu.c
 menufactory: menufactory.o mfmain.o
 	$(CC) `gtk-config --libs` menufactory.o mfmain.o -o menufactory
 
-menufactory.o:
+menufactory.o: menufactory.c mfmain.h
 	$(CC) `gtk-config --cflags` -c menufactory.c -o menufactory.o
 
-mfmain.o:
+mfmain.o: mfmain.c mfmain.h menufactory.h
 	$(CC) `gtk-config --cflags` -c mfmain.c -o mfmain.o
 
 clean: 
