@@ -1,3 +1,9 @@
+Thu Apr  2 17:30:04 BST 1998 Tony Gale <gale@gtk.org>
+
+	* examples/gtkdial/Makefile,
+	  examples/menu/Makefile,
+	  examples/tictactoe/Makefile : add correct dependencies
+
 Thu Apr  2 13:04:37 BST 1998 Tony Gale <gale@gtk.org>
 
 	* docs/gtkfaq.sgml: add question on failing GIMP configure
